unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/adroll__AdRollSegmentObject__c.object-meta.xml
<CustomObject>
    <description>AdRoll object type definition for the Segment Queries</description>
    <label>RollWorks Segment Object</label>
    <nameField>
        <displayFormat>ARSO-{000000}</displayFormat>
        <label>RollWorks Segment Object ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Segment Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>