unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__Active__c.field-meta.xml
<CustomField>
    <fullName>adroll__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked then this is Active</description>
    <inlineHelpText>If Checked then this is Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>