unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__AdRollSegment__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdRollSegment__c</fullName>
    <description>Segment For the RollWorks Object Type</description>
    <inlineHelpText>Segment For the RollWorks Object Type</inlineHelpText>
    <label>RollWorks Segment</label>
    <referenceTo>adroll__AdRollSegment__c</referenceTo>
    <relationshipLabel>RollWorks Segment Objects</relationshipLabel>
    <relationshipName>AdRollSegmentObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>