unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__LastSyncedDateTime__c.field-meta.xml
<CustomField>
    <fullName>adroll__LastSyncedDateTime__c</fullName>
    <description>DateTime When the RollWorks Segment Object was last synced</description>
    <inlineHelpText>DateTime When the RollWorks Segment Object was last synced</inlineHelpText>
    <label>Last Synced Date Time</label>
    <type>DateTime</type>
</CustomField>