unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__ObjectPrefix__c.field-meta.xml
<CustomField>
    <fullName>adroll__ObjectPrefix__c</fullName>
    <description>Prefix to link to the object from the contact (ex Account for Select Id From Contact Where Account.xxx). Field name of the object reference</description>
    <inlineHelpText>Prefix to link to the object from the contact (ex Account for Select Id From Contact Where Account.xxx). Field name of the object reference</inlineHelpText>
    <label>ObjectPrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>