unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>adroll__ObjectType__c</fullName>
    <description>Type of Object that is used to generate the Query</description>
    <inlineHelpText>Type of Object that is used to generate the Query</inlineHelpText>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>