unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__Segment_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>adroll__Segment_Member_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The batch automatically populates the segment member count</description>
    <inlineHelpText>This is auto populated by the batch</inlineHelpText>
    <label>Segment Member Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>