unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__Segment_Member_Success_Count__c.field-meta.xml
<CustomField>
    <fullName>adroll__Segment_Member_Success_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Records Successfully processed</description>
    <inlineHelpText>No of Records Successfully processed</inlineHelpText>
    <label>Segment Member Success Count(Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>