unpackaged/main/default/objects/adroll__AdRollSegmentObject__c/fields/adroll__Status__c.field-meta.xml
<CustomField>
    <fullName>adroll__Status__c</fullName>
    <description>Status of the Segment  Member Batch Job</description>
    <inlineHelpText>Status of the Segment  Member Batch Job</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>